fix bug haha